add signup button to mobile menu

--- a/src/index.html
+++ b/src/index.html
@@ -197,6 +197,14 @@
                 <li><a href="#about-us" onclick="toggleMenu()">About Us</a></li>
                 <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
             </ul>
+
+            <div class="mx-auto w-fit mt-20">
+                <a 
+                    href="https://owee.tactile.events/event/2025?language=en" 
+                    class="bg-primary text-white text-lg font-bold py-4 px-8 rounded-md hover:bg-primary-dark transition duration-300 ease-in-out">
+                    Sign up now!
+                </a>
+            </div>
         </div>
     </main>
     <footer class="bg-secondary-dark text-white text-center py-4">
