--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EJW 2025</title>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <link href="/dist/styles.css" rel="stylesheet">
+    <link href="../dist/styles.css" rel="stylesheet">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
 
