small ui changes

--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,10 @@
             </div>
         </div>
         <div class="bg-[url('../assets/ijsjes.jpg')] bg-cover bg-center h-[calc(100vh-4rem)]">
-            <div id="hero" class="h-full w-full bg-secondary-light/70">
-                <img src="../assets/beeldmerk.svg" alt="Logo" class="w-36 p-5 text-black">
+            <div id="hero" class="h-full w-full bg-secondary-dark/70 text-white">
+                <img src="../assets/beeldmerk.svg" alt="Logo" class="w-36 p-5 text-white">
                 <h1 class="text-center">Freshmen Weekend 2025</h1>
-                <h2 class="text-center mt-sm">8-10th August</h2>
+                <h2 class="text-center mt-lg !text-4xl">8-10th August</h2>
                 <div class="mx-auto w-fit mt-20">
                     <a 
                         href="https://owee.tactile.events/event/2025?language=en" 
