change mail range

--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,7 @@
             </details>
             <details>
                 <summary>What do I need to bring to the freshmen weekend?</summary>
-                <p>A detailed packing list will be send to you 1-2 weeks before the weekend, but the most important items are:</p>
+                <p>A detailed packing list will be send to you in the same week as the weekend, but the most important items are:</p>
                 <ul class="list-disc ml-5 mt-2xs">
                     <li>Waterbottle</li>
                     <li>Towel</li>
